# deskapp

./: README.md  meson.build
.cache/clangd/index/: main.cpp.70CB8F282CB2FB4B.idx
src/: example-4  layout.ui  main.cpp  meson.build  window.ui
